# zkevm-circuits-audit

./: Cargo.toml
.github/workflows/: basic_build.yaml
src/: config.rs  lib.rs  test_utils.rs  utils.rs
src/base_structures/: mod.rs
src/base_structures/decommit_query/: mod.rs
src/base_structures/log_query/: mod.rs
src/base_structures/memory_query/: mod.rs
src/base_structures/precompile_input_outputs/: mod.rs
src/base_structures/recursion_query/: mod.rs
src/base_structures/register/: mod.rs
src/base_structures/state_diff_record/: mod.rs
src/base_structures/vm_state/: mod.rs  saved_context.rs
src/code_unpacker_sha256/: input.rs  mod.rs
src/demux_log_queue/: input.rs  mod.rs
src/ecrecover/: baseline.rs  decomp_table.rs  input.rs  mod.rs  naf_abs_div2_table.rs  new_optimized.rs
src/eip_4844/: input.rs  mod.rs
src/fsm_input_output/: mod.rs
src/keccak256_round_function/: input.rs  mod.rs
src/linear_hasher/: input.rs  mod.rs
src/log_sorter/: input.rs  mod.rs
src/main_vm/: cycle.rs  decoded_opcode.rs  loading.rs  mod.rs  opcode_bitmask.rs  pre_state.rs  register_input_view.rs  state_diffs.rs  test_utils.rs  utils.rs  witness_oracle.rs
src/ram_permutation/: input.rs  mod.rs
src/recursion/: mod.rs
src/scheduler/: aux.rs  auxiliary.rs  input.rs  mod.rs
src/secp256r1_verify/: baseline.rs  mod.rs  new_optimized.rs
src/sha256_round_function/: input.rs  mod.rs
src/sort_decommittment_requests/: input.rs  mod.rs
src/storage_application/: input.rs  mod.rs
src/storage_validity_by_grand_product/: input.rs  mod.rs  test_input.rs
src/tables/: bitshift.rs  call_costs_and_stipends.rs  integer_to_boolean_mask.rs  mod.rs  test_bit.rs  uma_ptr_read_cleanup.rs
src/transient_storage_validity_by_grand_product/: input.rs  mod.rs
(+34 files in other folders)
