[package]
name = "zkevm_circuits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2"
serde = { version = "1", features = ["derive"] }
rand = "0.4"
smallvec = { version = "*", features = [
    "const_generics",
    "const_new",
    "serde",
] }
arrayvec = "*"
zkevm_opcode_defs = {path = "../zkevm_opcode_defs"}
# boojum = {git = "https://github.com/matter-labs/boojum.git", branch = "main"}
boojum = { path = "../boojum" }
bincode = "*"
ethereum-types = "0.12.*"
cs_derive = { path = "../boojum/cs_derive" }
# cs_derive = { git = "https://github.com/matter-labs/boojum.git", branch = "main" }
serde_json = "*"
itertools = "0.10"
rand_new = { package = "rand", version = "0.8" }
hex = "*"


[dev-dependencies]
hex = "*"
